--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,11 @@ repositories {
         url = "https://oss.sonatype.org/content/groups/public/"
     }
     maven { url 'https://raw.githubusercontent.com/CarmJos/EasyPlugin/repo/' }
+    maven {
+        name = "helpchatRepoReleases"
+        url = uri("https://repo.extendedclip.com/releases")
+    }
+    maven { url "https://repo.helpch.at/releases" }
 
 }
 shadowJar {
@@ -27,8 +32,10 @@ shadowJar {
 }
 
 dependencies {
-    compileOnly("org.spigotmc:spigot-api:1.20.1-R0.1-SNAPSHOT")
+    compileOnly "org.spigotmc:spigot-api:1.20.1-R0.1-SNAPSHOT"
+    compileOnly "me.clip:placeholderapi:2.11.6"
     implementation "cc.carm.lib:easyplugin-utils:1.5.12"
+    implementation 'org.apache.commons:commons-text:1.10.0'
 
 }
 
