--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ group = 'top.molab.minecraft'
 version = '1.0-SNAPSHOT'
 
 repositories {
+    maven { url 'https://repo.carm.cc/repository/maven-public/' }
     mavenCentral()
     maven {
         name = "spigotmc-repo"
@@ -25,6 +26,7 @@ repositories {
     }
     maven { url "https://repo.helpch.at/releases" }
 
+
 }
 shadowJar {
     // 包含所有运行时依赖
@@ -34,8 +36,13 @@ shadowJar {
 dependencies {
     compileOnly "org.spigotmc:spigot-api:1.20.1-R0.1-SNAPSHOT"
     compileOnly "me.clip:placeholderapi:2.11.6"
+
     implementation "cc.carm.lib:easyplugin-utils:1.5.12"
+
     implementation 'org.apache.commons:commons-text:1.10.0'
+
+    api "cc.carm.lib:easysql-hikaricp:0.4.7"
+
 
 }
 
