--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,8 @@
 name: MoModeratorPlus
-version: '1.0-SNAPSHOT'
+version: '1.0.1-BETA'
 main: top.molab.minecraft.moModeratorPlus.MoModeratorPlus
 api-version: '1.20'
-load: STARTUP
+load: POSTWORLD
 softdepend: [ "PlaceholderAPI" ]
 commands:
   MoModeratorPlus:
@@ -15,31 +15,31 @@ commands:
       - mm+
   ban:
     description: MoModeratorPlus Ban
-    usage: /MoModeratorPlus
-    permission: moModPlus.admin
+    usage: /ban
+    permission: moModPlus.admin.ban
     aliases: [ ]
 
   banip:
     description: MoModeratorPlus BanIP
     usage: /banip
-    permission: moModPlus.admin
+    permission: moModPlus.admin.banip
     aliases:
       - ban-ip
   mute:
     description: MoModeratorPlus Mute
     usage: /mute
-    permission: moModPlus.admin
+    permission: moModPlus.admin.mute
     aliases: [ ]
 
   kick:
     description: MoModeratorPlus Kick
     usage: /kick
-    permission: moModPlus.admin
+    permission: moModPlus.admin.kick
     aliases: [ ]
 
   unban:
     description: MoModeratorPlus Unban
     usage: /unban
-    permission: moModPlus.admin
+    permission: moModPlus.admin.unban
     aliases: [ ]
 
