--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'top.molab.minecraft'
-version = '1.0-SNAPSHOT'
+version = '1.0.2-Beta'
 
 repositories {
     maven { url 'https://repo.carm.cc/repository/maven-public/' }
