docs：在config内加入文档地址

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,8 +1,9 @@
-###########################################################                                                        #
-# 墨云协管+ | MoModeratorPlus Configuration                #
-# https://github.com/MoModeratorPlus/MoModeratorPlus     #
-# OpenMoPlugins Project                                  #
-##########################################################
+##############################################################                                                        #
+# 墨云协管+ | MoModeratorPlus Configuration                   #
+# https://github.com/MoModeratorPlus/MoModeratorPlus        #
+# OpenMoPlugins Project                                     #
+# Document: https://openmo.molab.top/bukkit/momoderatorplus/#
+#############################################################
 
 # 这是墨云协管的配置文件
 
