--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,15 @@ group = 'top.molab.minecraft'
 version = '1.0.3-Beta'
 
 repositories {
-    maven { url 'https://repo.carm.cc/repository/maven-public/' }
     mavenCentral()
+    maven { url 'https://jitpack.io' }
+    maven {
+        url "https://maven.aliyun.com/repository/public"
+        name "aliyunCenter"
+    }
+    maven {
+        url 'https://repo.carm.cc/repository/maven-public/'
+    }
     maven {
         name = "spigotmc-repo"
         url = "https://hub.spigotmc.org/nexus/content/repositories/snapshots/"
@@ -19,12 +26,18 @@ repositories {
         name = "sonatype"
         url = "https://oss.sonatype.org/content/groups/public/"
     }
+    maven {
+        url 'https://oss.sonatype.org/content/repositories/snapshots'
+    }
     maven { url 'https://raw.githubusercontent.com/CarmJos/EasyPlugin/repo/' }
     maven {
         name = "helpchatRepoReleases"
         url = uri("https://repo.extendedclip.com/releases")
     }
     maven { url "https://repo.helpch.at/releases" }
+    maven {
+        url 'https://jitpack.io'
+    }
 
 
 }
@@ -36,6 +49,8 @@ shadowJar {
 dependencies {
     compileOnly "org.spigotmc:spigot-api:1.20.1-R0.1-SNAPSHOT"
     compileOnly "me.clip:placeholderapi:2.11.6"
+    testImplementation 'com.github.seeseemelk:MockBukkit-v1.20:3.93.2'
+    testImplementation("org.junit.jupiter:junit-jupiter:5.8.1")
 
     implementation "cc.carm.lib:easyplugin-utils:1.5.12"
 
@@ -55,7 +70,7 @@ tasks {
     }
 }
 
-def targetJavaVersion = 17
+def targetJavaVersion = 21
 java {
     def javaVersion = JavaVersion.toVersion(targetJavaVersion)
     sourceCompatibility = javaVersion
@@ -80,4 +95,8 @@ processResources {
     filesMatching('plugin.yml') {
         expand props
     }
+}
+
+test {
+    useJUnitPlatform()
 }
